apps/vikunja/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
  labels:
    app.kubernetes.io/instance: vikunja
    app.kubernetes.io/name: vikunja
  annotations:
    secret.reloader.stakater.com/reload: "vikunja-env"
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: vikunja
      app.kubernetes.io/instance: vikunja
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vikunja
        app.kubernetes.io/instance: vikunja
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      containers:
        - name: vikunja
          image: vikunja/vikunja:2.7.0
          imagePullPolicy: IfNotPresent
          securityContext:
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
            allowPrivilegeEscalation: false
          ports:
            - name: http
              containerPort: 3456
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/vikunja/config.yml
              subPath: config.yml
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/v1/info
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/v1/info
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
      volumes:
        - name: config
          configMap:
            name: vikunja-config
