apps/vikunja/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vikunja-httproute
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Home
    gethomepage.dev/name: Vikunja
    gethomepage.dev/href: "https://vikunja.home.alden.ai"
    gethomepage.dev/description: Project / Task Management
    gethomepage.dev/icon: vikunja.svg
    gethomepage.dev/app: vikunja # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/pod-selector: app.kubernetes.io/name=vikunja
spec:
  parentRefs:
  - name: default-https-gateway
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - vikunja.home.alden.ai
  rules:
  - backendRefs:
    - name: vikunja
      port: 3456
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
